# process-parameter-optimizer

./: .gitignore  AI充填工艺参数优化系统开发流程.docx  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.ko.md  README.md  README.zh-CN.md  pyproject.toml
docs/: WRK_WEIGHT_SUMMARY_ORDER_품목목록.md  machine_parameters.txt
scripts/: demo_filling.py
src/: bayesian_optimizer.py  injection_molding.py
src/core/: bayesian_optimizer.py
src/filling/: aggregate.py  analyzer.py  config.py  data_loader.py  predictor.py  recommender.py  synthetic_data.py  trend.py
tests/filling/: test_aggregate.py  test_analyzer.py  test_config.py  test_data_loader.py  test_predictor.py  test_recommender.py  test_trend.py
